feat: GET all reservations do usuário auth
